JDK 11 port: mechanical desugaring (switch, pattern instanceof)
Generated by the same JavaParser-based tool:
- arrow-form switch statements -> colon form with break
- switch expressions (return switch / T v = switch) -> switch statements
- pattern matching instanceof on locals/parameters -> explicit casts
Sites the tool could not handle safely (fields/method calls as tested expression,
switch expressions as arguments) are left for hand porting.